finalize apply page

--- a/locale/el/LC_MESSAGES/django.po
+++ b/locale/el/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-12-03 23:56+0200\n"
+"POT-Creation-Date: 2017-12-04 03:36+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -66,53 +66,72 @@ msgstr "Εσωτερικός Κανονισμός"
 msgid "Application form"
 msgstr "Αίτηση Συμμετοχής"
 
-#: .\main\templates\main\apply.html:33
+#: .\main\templates\main\apply.html:31
+msgid "Idea"
+msgstr "Ιδέα"
+
+#: .\main\templates\main\apply.html:34
 msgid ""
 "Please provide your project/company/team name and web address (if available)."
-msgstr ""
+msgstr "Όνομα σχεδίου/ομάδας/εταιρείας και ιστοσελίδα (εάν υπάρχει)"
 
-#: .\main\templates\main\apply.html:39
+#: .\main\templates\main\apply.html:40
 msgid ""
 "Please describe your concept with a one-sentence pitch, as follows: \"My "
 "company, _(insert name of company)_, is developing _(a defined offering)_ to "
 "help _(a defined audience)_ _(solve a problem)_ with _(secret sauce)_\". "
 "(https://fi.co/madlibs)"
 msgstr ""
+"Περιγράψτε την ιδέα σε μία πρόταση με βάση τον παρακάτω σκελέτο: \" Η ομάδα "
+"_(Εισάγεται όνομα ομάδας)_, αναπτύσει _(Η λύση που αναπτύσεται)_ για να "
+"βοηθήσει _(Οι χρήστες της λύσης)_ να _(Το πρόβλημα που λύνουν)_ με _(Η "
+"καινοτομία που εισάγεται)\" "
 
-#: .\main\templates\main\apply.html:45
+#: .\main\templates\main\apply.html:46
 msgid "What stage are you at right now?"
-msgstr ""
+msgstr "Σε ποιό από τα παρακάτω στάδια βρίσκεστε;"
 
-#: .\main\templates\main\apply.html:59
+#: .\main\templates\main\apply.html:57
+msgid "Market"
+msgstr "Αγορά"
+
+#: .\main\templates\main\apply.html:60
 msgid ""
 "Who are your target customers? Briefly describe a typical person who would "
 "buy your product/service."
 msgstr ""
+"Ποιοί είναι οι πελάτες στόχος; Περιγράψτε συνοπτικά τον τυπικό καταναλωτή "
+"σας."
 
-#: .\main\templates\main\apply.html:65
+#: .\main\templates\main\apply.html:66
 msgid ""
 "What problem or challenge does your product/service solve for such customers?"
-msgstr ""
+msgstr "Τι πρόβλημα λύνει το προιόν σας, για τον παραπάνω καταναλωτή;"
 
-#: .\main\templates\main\apply.html:71
+#: .\main\templates\main\apply.html:72
 msgid ""
 "What kind of solutions, if any, are your target customers using today to "
 "solve this problem or challenge?"
 msgstr ""
+"Πως λύνουν μέχρι σήμερα το παραπάνω πρόβλημα οι μελλοντικοί καταναλωτές σας;"
 
-#: .\main\templates\main\apply.html:77
+#: .\main\templates\main\apply.html:78
 msgid ""
 "Can you name two or three of your closest competitors, if any exist? Please "
 "provide links to their websites."
 msgstr ""
+"Ποιοί είναι οι σημαντικότεροι ανταγωνιστές σας, εάν υπάρχουν; "
+"(Συμπεριλάβεται link για τις ιστοσελίδες τους)"
 
-#: .\main\templates\main\apply.html:83
+#: .\main\templates\main\apply.html:84
 msgid ""
 "What is different about your product/service that makes it better than the "
 "competition?"
 msgstr ""
+"Ποιό είναι το συγκριτικό σας πλεονέκτημα; Τι το κάνει διαφορετικό σε σχέση "
+"με τις υπάρχουσες λύσεις;"
 
-#: .\main\templates\main\apply.html:89
+#: .\main\templates\main\apply.html:90
 msgid ""
 "Please give us your assessment of the market potential. For instance, how "
 "large is the total addressable market for this product/service? How many "
@@ -120,89 +139,123 @@ msgid ""
 "spend with your company every year? Is this market going to be growing year "
 "over year? What are the trends affecting market growth?"
 msgstr ""
+"Δώστε μια εκτίμηση της δυνητικής αγοράς. Για παράδειγμα, πόσο μεγάλη είναι η "
+"αγορά που απεθύνεστε; Πόσοι δυνητικοί καταναλωτές υπάρχουν; Πόσα χρήματα "
+"μπορούν να ξοδέψουν για αυτό που προσφέρεται κάθε χρόνο; Η αγορά στόχος "
+"αναπτύσσεται σε συνάρτηση του χρόνου; Τι επηρεάζει την ανάπτυξη της;"
 
-#: .\main\templates\main\apply.html:95
+#: .\main\templates\main\apply.html:96
 msgid ""
 "Have you yet taken any steps to validate the demand for your product/service "
 "in the market?"
 msgstr ""
+"Έχουν γίνει κινήσεις για να επιβεβαωθεί η ζήτηση για την λύση που "
+"προσφέρεται;"
 
-#: .\main\templates\main\apply.html:103
+#: .\main\templates\main\apply.html:101 .\main\templates\main\layout.html:79
+msgid "Team"
+msgstr "Ομάδα"
+
+#: .\main\templates\main\apply.html:104
 msgid ""
 "How many founders do you have in the team and how many team members in "
 "total, including employees (if any)?"
-msgstr ""
+msgstr "Πόσα ιδρυτικά μέλη υπάρχουν στην ομάδα; Υπάρχουν επιπλέον μέλη;"
 
-#: .\main\templates\main\apply.html:109
+#: .\main\templates\main\apply.html:110
 msgid ""
 "What is your team composition and roles? For every team member please give "
 "us: 1) name; 2) description of role in the team; 3) full-time or part-time "
 "involvement status; 4) relevant professional experience or educational "
 "background; 5) links to online profiles if available."
 msgstr ""
+"Ποιά η σύσταση της ομάδας σας και οι συγκεκριμένοι ρόλοι; Συμπληρώστε τα "
+"παρακάτω για κάθε μέλος 1) Όνομα 2) Περιγραφή ρόλου 3) Πλήρης/Ημιαπασχόληση "
+"4) Σχετική επαγγελματική ή ακαδημαική εμπειρία 5) Link σε προφιλ (Linkedin, "
+"Github, Facebook etc) εάν υπάρχουν"
 
-#: .\main\templates\main\apply.html:115
+#: .\main\templates\main\apply.html:116
 msgid ""
 "How equipped is your current team to bring this product/service to the "
 "market?"
 msgstr ""
+"Ποιές συγκεκριμένες ικανότητες υπάρχουν στην ομάδα ωστε να υλοποιηθεί το "
+"προιόν και να φτάσει μέχρι την αγορά;"
 
-#: .\main\templates\main\apply.html:121
+#: .\main\templates\main\apply.html:122
 msgid "Will you need to add more core skills to the team? "
-msgstr ""
+msgstr "Θα χρειαστείτε επιπλέον δεξιότητες για να ολοκληρωθεί η ομάδα;"
 
-#: .\main\templates\main\apply.html:127
+#: .\main\templates\main\apply.html:128
 msgid "Why did the team start working on this idea? What excites you about it?"
-msgstr ""
+msgstr "Γιατί η συγκεκριμένη ιδέα; Τι σας ενθουσιάζει;"
 
-#: .\main\templates\main\apply.html:133
+#: .\main\templates\main\apply.html:134
 msgid ""
 "When did you start working on the project and what progress have you made "
 "over the past 3 months?"
 msgstr ""
+"Πότε ξεκινήσατε να δουλεύεται στην ιδέα και πως εξελίσεται τους τελευταίους "
+"3 μήνες;"
 
-#: .\main\templates\main\apply.html:139
+#: .\main\templates\main\apply.html:140
 msgid ""
 "What is the founders' 3-year vision for the business? If all goes perfect, "
 "what should the business look like in 3 years from now?"
 msgstr ""
+"Ποιό είναι το όραμα σας για τα επόμενα 3 χρόνια; Έαν όλα έρθουν όπως έχουν "
+"σχεδιαστεί, πως θα μοιάζει η εταιρεία σε 3 χρόνια;"
 
-#: .\main\templates\main\apply.html:147
+#: .\main\templates\main\apply.html:145
+msgid "Support"
+msgstr "Υποστήριξη"
+
+#: .\main\templates\main\apply.html:148
 msgid ""
 "What are you hoping to get out of the OK!Thess pre-incubation program? What "
 "do you need most help with right now?"
 msgstr ""
+"Τι περιμένετε από το OK!Thess; Που χρειάζεστε την περισσότερη υποστήριξη;"
 
-#: .\main\templates\main\apply.html:153
+#: .\main\templates\main\apply.html:154
 msgid "Have you been through an accelerator or similar program before?"
-msgstr ""
+msgstr "Έχετε θητεύσει σε παρόμοιο πρόγραμμα στο παρελθόν;"
 
-#: .\main\templates\main\apply.html:159
+#: .\main\templates\main\apply.html:160
 msgid ""
 "If accepted, can all founders attend the entirety of the program in person "
 "(bootcamp weekend, masterclasses, coaching sessions)? In case any of the "
 "founders are not able to be fully committed, please elaborate here."
 msgstr ""
+"Εάν επιλεγείτε, μπορούν όλα τα ιδρυτικά μέλη να παρακολουθήσουν το "
+"πρόγραμμα(Βοοtcamp και εβδομαδιαίες συναντήσεις); Εάν όχι, παρακαλώ "
+"περιγράψτε τους λόγους."
 
-#: .\main\templates\main\apply.html:165
+#: .\main\templates\main\apply.html:166
 msgid ""
 "If accepted, how many of your team members would make use of the co-working "
 "space at OK!Thess on a daily basis?"
 msgstr ""
+"Εάν επιλεγείτε, πόσα απο τα μέλη της ομάδας σας θα κάνουν χρήση του "
+"συνεργατικού χώρου εργασίας σε καθημερινή βάση;"
 
-#: .\main\templates\main\apply.html:173
+#: .\main\templates\main\apply.html:171
+msgid "Contact info"
+msgstr "Λεπτομέριες επικοινωνίας"
+
+#: .\main\templates\main\apply.html:174
 msgid "Team representative name"
-msgstr ""
+msgstr "Όνομα εκπροσώπου ομάδας"
 
-#: .\main\templates\main\apply.html:179
+#: .\main\templates\main\apply.html:180
 msgid "Team representative phone number"
-msgstr ""
+msgstr "Τηλεφωνικός αριθμός εκπροσώπου ομάδας"
 
-#: .\main\templates\main\apply.html:185
+#: .\main\templates\main\apply.html:186
 msgid "Team representative email"
-msgstr ""
+msgstr "email εκπροσώπου ομάδας"
 
-#: .\main\templates\main\apply.html:189
+#: .\main\templates\main\apply.html:190
 msgid "Submit"
 msgstr "Αποστολή"
 
@@ -269,17 +322,14 @@ msgstr "Σχετικά"
 
 #: .\main\templates\main\events.html:71
 msgid ""
-"Our open space is being used by several of the city’s creative teams as a "
-"meeting space and those meetings are open to anyone interested. Meetups’ "
-"participants comprise the wider OK!Thess community, a community that "
-"exchanges knowledge and experiences targeting to create added value for all "
-"of its members."
+"Meetings, especially regular meetings of people who share a particular "
+"interest such as a programming language or entrepreneurship"
 msgstr ""
 "Ο χώρος του ΟΚ!Τhess χρησιμοποιείται απο ομάδες της πόλης για τις "
 "συναντήσεις τους. Οι συναντήσεις είναι ανοιχτές και καλούν κάθε "
 "ενδιαφερόμενο να συμμετέχει σε αυτές. Το σύνολο των μελών των συναντήσεων "
-"αποτελούν και την κοινότητα του OK!Thess, μια κοινότητα που ανταλλάσει "
-"γνώση και εμπειρίες με σκοπό την ενδυνάμωση όλων των μελών της."
+"αποτελούν και την κοινότητα του OK!Thess, μια κοινότητα που ανταλλάσει γνώση "
+"και εμπειρίες με σκοπό την ενδυνάμωση όλων των μελών της."
 
 #: .\main\templates\main\events.html:76
 msgid ""
@@ -352,10 +402,6 @@ msgstr "Σχετικά"
 msgid "How do I participate?"
 msgstr "Πως συμμετέχω"
 
-#: .\main\templates\main\layout.html:79
-msgid "Team"
-msgstr "Ομάδα"
-
 #: .\main\templates\main\layout.html:82
 msgid "Teams"
 msgstr "Ομάδες"
@@ -390,13 +436,23 @@ msgstr "ΧΟΡΗΓΟΙ"
 
 #: .\main\templates\main\program-alumni.html:13
 msgid "Graduated Teams"
-msgstr "Απόφοιτοι"
+msgstr ""
 
 #: .\main\templates\main\program-alumni.html:32
+#, fuzzy
+#| msgid "Alumni"
 msgid "Alumni network"
-msgstr "Δίκτυο αποφοίτων"
+msgstr "Απόφοιτοι"
 
 #: .\main\templates\main\program-alumni.html:34
+#, fuzzy
+#| msgid ""
+#| "\n"
+#| "                              Our graduates comprise the wider OK!Thess "
+#| "network. They meet at regular intervals to exchange post OK!Thess views "
+#| "and knowledge and they are also invited to help our hosted teams as "
+#| "Mentors.\n"
+#| "                              "
 msgid ""
 "\n"
 "                    Our graduates comprise the wider OK!Thess network. They "
@@ -410,32 +466,32 @@ msgstr ""
 "αυτούς καλούνται να βοηθήσουν τις φιλοξενούμενες ομάδες απο τον ρόλο του "
 "Μέντορα."
 
-#: .\main\templates\main\program-alumni.html:40
+#: .\main\templates\main\program-alumni.html:39
+#: .\main\templates\main\program-mentors.html:46
+#: .\main\templates\main\program-partners.html:32
+#: .\main\templates\main\program-teams.html:54
+msgid "Apply now!"
+msgstr "Kάνε Αίτηση"
+
+#: .\main\templates\main\program-alumni.html:43
 #, fuzzy
 #| msgid "Hosted Teams"
 msgid "Hosted Teams »"
 msgstr "Φιλοξενούμενες Ομάδες"
 
-#: .\main\templates\main\program-alumni.html:41
+#: .\main\templates\main\program-alumni.html:44
 #: .\main\templates\main\program-mentors.html:36
 #: .\main\templates\main\program-partners.html:26
 #: .\main\templates\main\program-teams.html:58
 msgid "Mentors"
 msgstr "Μέντορες"
 
-#: .\main\templates\main\program-alumni.html:42
+#: .\main\templates\main\program-alumni.html:45
 #: .\main\templates\main\program-mentors.html:42
 #: .\main\templates\main\program-partners.html:22
 #: .\main\templates\main\program-teams.html:60
 msgid "Team &amp; Partners"
 msgstr ""
-
-#: .\main\templates\main\program-alumni.html:46
-#: .\main\templates\main\program-mentors.html:46
-#: .\main\templates\main\program-partners.html:32
-#: .\main\templates\main\program-teams.html:54
-msgid "Apply now!"
-msgstr "Kάνε Αίτηση"
 
 #: .\main\templates\main\program-mentors.html:13
 msgid "Our Mentors"
@@ -488,11 +544,11 @@ msgid ""
 msgstr ""
 "\n"
 "                               Οι ομάδες επιλέγοντε βάση τη βιωσιμότητα της "
-"πρότασης που καταθέτουν, και μετά απο συνεντεύξη. Το 3-μηνο πρόγραμμα "
-"ξεκινάει με έναν εντατικό μήνα εργαστηρίων. Τους επόμενους 2 μήνες οι ομάδες "
-"δουλεύουν με τους coach του OK!Thess, για την δημιουργία ενός βιώσιμου "
-"επιχειρηματικού μοντέλου. Κάθε κύκλος τελειώνει με την ημέρα επίδειξης των "
-"προιόντων και υπηρεσιών που έχουν αναπτυχθεί.\n"
+"επιχειρηματικής πρότασης που καταθέτουν, και μετά απο συνεντεύξη. Το 3-μηνο "
+"πρόγραμμα ξεκινάει με έναν εντατικό μήνα εργαστηρίων. Τους επόμενους 2 μήνες "
+"οι ομάδες δουλεύουν με τους coach του OK!Thess, για την δημιουργία ενός "
+"βιώσιμου επιχειρηματικού μοντέλου. Κάθε κύκλος τελειώνει με την ημέρα "
+"επίδειξης των προιόντων και υπηρεσιών που έχουν αναπτυχθεί.\n"
 "                              "
 
 #: .\main\templates\main\program-teams.html:59
@@ -508,3 +564,13 @@ msgstr "Ελληνικά"
 #: .\okthess\settings.py:182
 msgid "English"
 msgstr "Αγγλικά"
+
+#, fuzzy
+#~| msgid "Hosted Teams"
+#~ msgid "Hosted Teams >>"
+#~ msgstr "Φιλοξενούμενες Ομάδες"
+
+#, fuzzy
+#~| msgid "Alumni"
+#~ msgid "Alumni >>"
+#~ msgstr "Απόφοιτοι"
