fix program teams el text

--- a/locale/el/LC_MESSAGES/django.po
+++ b/locale/el/LC_MESSAGES/django.po
@@ -469,7 +469,7 @@ msgid ""
 "                    "
 msgstr ""
 "\n"
-"                               Οι ομάδες επιλέγοντε βάση τη βιωσιμότητα της "
+"                               Οι ομάδες επιλέγονται με βάση τη βιωσιμότητα της "
 "επιχειρηματικής πρότασης που καταθέτουν, και μετά απο συνεντεύξη. Το 3-μηνο "
 "πρόγραμμα ξεκινάει με έναν εντατικό μήνα εργαστηρίων. Τους επόμενους 2 μήνες "
 "οι ομάδες δουλεύουν με τους coach του OK!Thess, για την δημιουργία ενός "
