fix gr content - tiny

--- a/locale/el/LC_MESSAGES/django.po
+++ b/locale/el/LC_MESSAGES/django.po
@@ -290,7 +290,7 @@ msgid ""
 "                      "
 msgstr ""
 "Το ΟΚ!Τhess προσφέρει χώρο και ένα ολοκληρωμένο πρόγραμμα τεχνικής "
-"υποστήριξη σε ομάδες ανθρώπων\n"
+"υποστήριξης σε ομάδες ανθρώπων\n"
 "με <strong>καινοτόμες ιδέες</strong>, βοηθώντας τους να αναπτύξουν ένα "
 "<strong>βιώσιμο\n"
 "επιχειρηματικό μοντέλο</strong> και να έρθουν σε επαφή\n"
