change apply CTA date

--- a/locale/el/LC_MESSAGES/django.po
+++ b/locale/el/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-02-21 19:35+0200\n"
+"POT-Creation-Date: 2018-04-25 15:38+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -322,7 +322,9 @@ msgid "Upcoming Community <strong>Meetups</strong>"
 msgstr "Επερχόμενες <strong>Ανοιχτές Συναντήσεις</strong>"
 
 #: .\main\templates\main\layout.html:93
-msgid "<strong>Apply</strong> for Spring '18"
+#, fuzzy
+#| msgid "<strong>Apply</strong> for Spring '18"
+msgid "<strong>Apply</strong> for Autumn '18"
 msgstr "Συμμετοχή"
 
 #: .\main\templates\main\layout.html:105
